--- a/src/NotFound.css
+++ b/src/NotFound.css
@@ -7,6 +7,7 @@
     height: 100vh;
     background-color: #2d2b2b;
     color: #ffffff;
+    padding: 30px;
   }
   
   .not-found-content {
